--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@netlify/functions": "^2.8.2",
     "@notionhq/client": "^2.2.15",
     "@tanstack/react-query": "^5.60.6",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flex-element": "^2.0.10",
