use mui palette

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/material": "^6.1.8",
     "@netlify/functions": "^2.8.2",
     "@notionhq/client": "^2.2.15",
     "@tanstack/react-query": "^5.60.6",
