routing for theme

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flex-element": "^2.0.10",
-    "react-router-dom": "^6.28.0",
+    "react-router": "^7.0.1",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
